--- a/src/main/resources/html/registration.html
+++ b/src/main/resources/html/registration.html
@@ -2,12 +2,12 @@
 <head>
    <meta charset="utf-8">
    <title>Slick Login</title>
-   <link rel="stylesheet" type="text/webapp.veiw.css" href="/resources/css/login.css" />
-   <link rel="stylesheet" type="text/webapp.veiw.css" href="/resources/css/tooltip.css" />
-   <script src="/resources/js/jquery-2.2.3.js"></script>
-   <script src="/resources/js/reg.js"></script>
-   <script src="/resources/js/ajaxreg.js"></script>
-   <script src="/resources/js/jquery.cookie.js"></script>
+   <link rel="stylesheet" type="text/webapp.view.css" href="/view/css/login.css" />
+   <link rel="stylesheet" type="text/webapp.view.css" href="/view/css/tooltip.css" />
+   <script src="/view/js/jquery-2.2.3.js"></script>
+   <script src="/view/js/reg.js"></script>
+   <script src="/view/js/ajaxreg.js"></script>
+   <script src="/view/js/jquery.cookie.js"></script>
 </head>
 <body>
    <header>
@@ -15,12 +15,12 @@
          <h1 id="slogan">Taste our cookies and become a bit happier</h1>
          <span>Go to home page</span>
       </a>
-      <img id="logo"src="/resources/img/irb3.gif">
+      <img id="logo"src="/view/img/irb3.gif">
       </img>
    </header>
    <div id = "regsuccess"></div>
    <form id="slick-login">
-      <img id= "anim" src="/resources/img/reg.jpg">
+      <img id= "anim" src="/view/img/reg.jpg">
       <h3>Registration form</h3>
       <div class="errors">
       </div>
