--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -2,11 +2,11 @@
 <head>
    <meta charset="utf-8">
    <title>Slick Login</title>
-   <link rel="stylesheet" type="text/webapp.veiw.css" href="/resources/css/login.css" />
-   <link rel="stylesheet" type="text/webapp.veiw.css" href="/resources/css/index.css" />
-   <script src="/resources/js/jquery-2.2.3.js"></script>
-   <script src="/resources/js/index.js"></script>
-   <script src="/resources/js/jquery.cookie.js"></script>
+   <link rel="stylesheet" type="text/webapp.view.css" href="/view/css/login.css" />
+   <link rel="stylesheet" type="text/webapp.view.css" href="/view//resources/css/index.css" />
+   <script src="/view//js/jquery-2.2.3.js"></script>
+   <script src="/view/js/index.js"></script>
+   <script src="/view/js/jquery.cookie.js"></script>
 </head>
 <body>
    <header>
@@ -14,10 +14,10 @@
          <a class="home" href="../index">Taste our cookies and become a bit happier</a>
          <a class="loglink" href="../login">
          <span>Login|Register</span>
-         <img width=30px src="/resources/img/account-login-xxl.png">
+         <img width=30px src="/view/img/account-login-xxl.png">
          </a>
       </h1>
-      <img id="logo"src="/resources/img/irb3.gif">
+      <img id="logo"src="/view/img/irb3.gif">
       </img>
    </header>
    <div id="cookie"></div>
