--- a/src/main/resources/html/login.html
+++ b/src/main/resources/html/login.html
@@ -2,11 +2,11 @@
 <head>
    <meta charset="utf-8">
    <title>Slick Login</title>
-   <link rel="stylesheet" type="text/webapp.veiw.css" href="/resources/css/login.css" />
-   <script src="/resources/js/jquery-2.2.3.js"></script>
-   <script src="/resources/js/login.js"></script>
-   <script src="/resources/js/ajaxlogin.js"></script>
-   <script src="/resources/js/jquery.cookie.js"></script>
+   <link rel="stylesheet" type="text/webapp.view.css" href="/view/css/login.css" />
+   <script src="/view/js/jquery-2.2.3.js"></script>
+   <script src="/view/js/login.js"></script>
+   <script src="/view/js/ajaxlogin.js"></script>
+   <script src="/view/js/jquery.cookie.js"></script>
 </head>
 <body>
    <header>
@@ -14,11 +14,11 @@
          <h1 id="slogan">Taste our cookies and become a bit happier</h1>
          <span>Go to home page</span>
       </a>
-      <img id="logo"src="/resources/img/irb3.gif">
+      <img id="logo"src="/view/img/irb3.gif">
       </img>
    </header>
    <form id="slick-login" method="post">
-      <img id="anim" src="/resources/img/log.jpg">
+      <img id="anim" src="/view/img/log.jpg">
       <h3>Login</h3>
       <div class="errors">
       </div>
