--- a/src/main/resources/html/logout.html
+++ b/src/main/resources/html/logout.html
@@ -2,14 +2,14 @@
 <head>
    <meta charset="utf-8">
    <title>Slick Login</title>
-   <link rel="stylesheet" type="text/webapp.veiw.css" href="/resources/css/logout.css" />
-   <script src="/resources/js/jquery-2.2.3.js"></script>
-   <script src="/resources/js/logout.js"></script>
+   <link rel="stylesheet" type="text/webapp.view.css" href="/view/css/logout.css" />
+   <script src="/view/js/jquery-2.2.3.js"></script>
+   <script src="/view/js/logout.js"></script>
 </head>
 
 <body>
    
-      <div id="bye">Hope to see you again</div><img id="anim" src="/resources/img/maxresdefault.jpg">
+      <div id="bye">Hope to see you again</div><img id="anim" src="/view/img/maxresdefault.jpg">
 
 </body>
 </html>
